# aocs

./: .gitignore  do_day.sh  pyproject.toml
aocs/2023/day_1/1/: day_1_1.py  test_day_1.py  test_day_1_1.py
aocs/2023/day_1/2/: day_1_2.py  day_2.py  test_day_1_2.py  test_day_2.py
aocs/2023/day_2/1/: day_2_1.py  test_day_2_1.py
aocs/2023/day_2/2/: day_2_2.py  test_day_2_2.py
aocs/2023/day_3/1/: day_3_1.py  test_day_3_1.py
aocs/2023/day_3/2/: day_3_2.py  test_day_3_2.py
aocs/2023/day_4/1/: day_4_1.py  test_day_4_1.py
aocs/2023/day_4/2/: day_4_2.py  test_day_4_2.py
aocs/commons/: input_reader.py
