[tool.poetry]
name = "aoc"
version = "0.1.0"
description = ""
authors = ["Alejandro Martinez <alejandroa@kannactnow.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
regex = "2023.10.3"


[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
